--- a/css/custom.css
+++ b/css/custom.css
@@ -28,6 +28,26 @@
   text-align:center;
   margin-bottom: -50px;
 }
+.city {
+  fill: black;
+  pointer-events: none;
+}
+.city-shadow {
+  fill: white;
+  opacity: 0.5;
+}
+.city-label {
+  font: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 10px;
+  pointer-events: none;
+}
+.label-shadow {
+  font: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 10px;
+  stroke: white;
+  stroke-width: 1.5px;
+  opacity: 0.8;
+}
 .sliders {
   margin:10px;
   max-width:200px;
