updated data and weighting system

--- a/css/custom.css
+++ b/css/custom.css
@@ -8,6 +8,12 @@
   margin: 10px 20px;
   height: 40px;
 }
+.toggle-group {
+  cursor: pointer;
+}
+.country {
+  fill: #d7d7d8;
+}
 .info-icon {
   color: #777;
   cursor:pointer;
@@ -83,20 +89,6 @@
     margin-top:0px;
   }
 }
-#need.sliders { background: #08306b; }
-  #disasters.sliders { background: #6baed6; }
-  #vuln.sliders { background: #4292c6; }
-  #coping.sliders { background: #2171b5; }
-  #pop.sliders { background: #08519c; }
-#funding.sliders { background: #00441b; }
-  #oda.sliders { background: #41ab5d; }
-  #recip.sliders { background: #238b45; }
-#entry.sliders { background: #3f007d; }
-  #ifrc.sliders { background: #dadaeb; }
-  #isd.sliders { background: #bcbddc; }
-  #deploy.sliders { background: #9e9ac8; }
-  #conflict.sliders { background: #807dba; }
-  #fy16.sliders { background: #6a51a3; }
 .sliders.null-slider { background: #e4e4e5 !important;}
 #collapsePrograms .well {
   padding: 6px 19px;
