--- a/css/custom.css
+++ b/css/custom.css
@@ -63,6 +63,8 @@
   cursor: pointer;
   display: inline-block;
   height:12px;
+  border-top: 1px solid #EAE8E8;
+  border-bottom: 1px solid #EAE8E8;
 }
 .graph-text-col {
   text-align: right;
