no decimals on weighting readout

--- a/css/custom.css
+++ b/css/custom.css
@@ -59,6 +59,9 @@
   max-width:200px;
   background:rgb(127, 0, 0);
 }
+.noUi-handle, .sliders {
+  cursor: pointer;
+}
 .graph-segment {
   cursor: pointer;
   display: inline-block;
