--- a/css/custom.css
+++ b/css/custom.css
@@ -114,7 +114,7 @@
     color: #1a1a1a;
     background-color: rgba(245,245,245,1);
     border-radius: 3px;
-    padding: 2px;
+    padding: 4px 6px;
     max-width: 300px;
 }
 #tooltip:empty {
