--- a/css/custom.css
+++ b/css/custom.css
@@ -44,10 +44,7 @@
   text-align:center;
   margin-bottom: -50px;
 }
-.staff-icon {
-  color: #3d3d3e;
-}
-.fy16-icon {
+.staff-icon, .fy16-icon, .activerecovery-icon {
   color: #3d3d3e;
 }
 .fy16-locator {
@@ -55,16 +52,19 @@
   stroke-width: 1.5px;
   stroke: rgba(0,75,121,1);
 }
-.fy16-locator.hide {
+.fy16-locator.hide, .activerecovery-locator.hide, .staff-locator.hide {
   display: none;
 }
+.activerecovery-locator {
+  fill: rgba(0,75,121,0);
+  stroke-width: 1.5px;
+  stroke: rgba(152,78,163,1);
+}
+
 .staff-locator {
   fill: rgba(0,75,121,0);
   stroke-width: 1.5px;
   stroke: rgba(236,183,49,1);
-}
-.staff-locator.hide {
-  display: none;
 }
 .city {
   fill: black;
